--- a/404.html
+++ b/404.html
@@ -54,8 +54,8 @@
       rel="stylesheet"
       href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css" /></head
   ><body
-    ><link rel="stylesheet" href="./style.css" /><div
-      ><link href="./404.css" rel="stylesheet" /><div
+    ><link rel="stylesheet" href="assets/css/style.css" /><div
+      ><link href="assets/css/404.css" rel="stylesheet" /><div
         class="not-found-container"
         ><h3>OOPS! PAGE NOT FOUND</h3
         ><div class="not-found-container1"
