--- a/area-logada.html
+++ b/area-logada.html
@@ -54,8 +54,8 @@
       rel="stylesheet"
       href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css" /></head
   ><body
-    ><link rel="stylesheet" href="./style.css" /><div
-      ><link href="./area-logada.css" rel="stylesheet" /><div
+    ><link rel="stylesheet" href="assets/css/style.css" /><div
+      ><link href="assets/css/area-logada.css" rel="stylesheet" /><div
         class="area-logada-container"
         ><div class="area-logada-arealogada"
           ><div class="area-logada-navigation-footer"
@@ -124,15 +124,15 @@
           ><div class="area-logada-navigation"
             ><div class="area-logada-items2"
               ><span class="area-logada-text30 Bodytext"
-                ><span>Sobre Nós</span></span
+                ><span><a href="sobre-ns.html">Sobre Nós</a></span></span
               ><span class="area-logada-text32 Bodytext"
-                ><span>Como Ajudar</span></span
+                ><span><a href="como-ajudar.html">Como Ajudar</a></span></span
               ><span class="area-logada-text34 Bodytext"
-                ><span>Contato</span></span
-              ><span class="area-logada-text36 Bodytext"><span>FAQ</span></span
+                ><span><a href="contato.html">Contato</span></span
+              ><span class="area-logada-text36 Bodytext"><span><a href="faq.html">FAQ</a></span></span
               ><div class="area-logada-login"
                 ><span class="area-logada-text38 Bodytext"
-                  ><span>Login</span></span
+                  ><span><a href="cadastrar-usuario.html">Login</a></span></span
                 ></div
               ></div
             ><img
