--- a/cadastrar-usuario.html
+++ b/cadastrar-usuario.html
@@ -56,8 +56,8 @@
       rel="stylesheet"
       href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css" /></head
   ><body
-    ><link rel="stylesheet" href="./style.css" /><div
-      ><link href="./cadastrar-usuario.css" rel="stylesheet" /><div
+    ><link rel="stylesheet" href="assets/css/style.css" /><div
+      ><link href="assets/css/cadastrar-usuario.css" rel="stylesheet" /><div
         class="cadastrar-usuario-container"
         ><div class="cadastrar-usuario-contactform"
           ><div class="cadastrar-usuario-form"
@@ -204,16 +204,16 @@
           ><div class="cadastrar-usuario-navigation"
             ><div class="cadastrar-usuario-items2"
               ><span class="cadastrar-usuario-text60 Bodytext"
-                ><span>Sobre Nós</span></span
+                ><span><a href="sobre-ns.html">Sobre Nós</a></span></span
               ><span class="cadastrar-usuario-text62 Bodytext"
-                ><span>Como Ajudar</span></span
+                ><span><a href="como-ajudar.html">Como Ajudar</a></span></span
               ><span class="cadastrar-usuario-text64 Bodytext"
-                ><span>Contato</span></span
+                ><span><a href="contato.html">Contato</span></span
               ><span class="cadastrar-usuario-text66 Bodytext"
-                ><span>FAQ</span></span
+                ><span><a href="faq.html">FAQ</a></span></span
               ><div class="cadastrar-usuario-login"
                 ><span class="cadastrar-usuario-text68 Bodytext"
-                  ><span>Login</span></span
+                  ><span><a href="cadastrar-usuario.html">Login</a></span></span
                 ></div
               ></div
             ><img
