--- a/como-ajudar.html
+++ b/como-ajudar.html
@@ -54,8 +54,8 @@
       rel="stylesheet"
       href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css" /></head
   ><body
-    ><link rel="stylesheet" href="./style.css" /><div
-      ><link href="./como-ajudar.css" rel="stylesheet" /><div
+    ><link rel="stylesheet" href="assets/css/style.css" /><div
+      ><link href="assets/css/como-ajudar.css" rel="stylesheet" /><div
         class="como-ajudar-container"
         ><div class="como-ajudar-comoajudar"
           ><div class="como-ajudar-frame1321316142"
@@ -141,15 +141,15 @@
           ><div class="como-ajudar-navigation"
             ><div class="como-ajudar-items"
               ><span class="como-ajudar-text28 Bodytext"
-                ><span>Sobre Nós</span></span
+                ><span><a href="sobre-ns.html">Sobre Nós</a></span></span
               ><span class="como-ajudar-text30 Bodytext"
-                ><span>Como Ajudar</span></span
+                ><span><a href="como-ajudar.html">Como Ajudar</a></span></span
               ><span class="como-ajudar-text32 Bodytext"
-                ><span>Contato</span></span
-              ><span class="como-ajudar-text34 Bodytext"><span>FAQ</span></span
+                ><span><a href="contato.html">Contato</span></span
+              ><span class="como-ajudar-text34 Bodytext"><span><a href="faq.html">FAQ</a></span></span
               ><div class="como-ajudar-login"
                 ><span class="como-ajudar-text36 Bodytext"
-                  ><span>Login</span></span
+                  ><span><a href="cadastrar-usuario.html">Login</a></span></span
                 ></div
               ></div
             ></div
