--- a/contato.html
+++ b/contato.html
@@ -54,8 +54,8 @@
       rel="stylesheet"
       href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css" /></head
   ><body
-    ><link rel="stylesheet" href="./style.css" /><div
-      ><link href="./contato.css" rel="stylesheet" /><div
+    ><link rel="stylesheet" href="assets/css/style.css" /><div
+      ><link href="assets/css/contato.css" rel="stylesheet" /><div
         class="contato-container"
         ><div class="contato-contactform"
           ><div class="contato-form"
@@ -156,14 +156,14 @@
             class="contato-navigation"
             ><div class="contato-items2"
               ><span class="contato-text38 Bodytext"
-                ><span>Sobre Nós</span></span
+                ><span><a href="sobre-ns.html">Sobre Nós</a></span></span
               ><span class="contato-text40 Bodytext"
-                ><span>Como Ajudar</span></span
-              ><span class="contato-text42 Bodytext"><span>Contato</span></span
-              ><span class="contato-text44 Bodytext"><span>FAQ</span></span
+                ><span><a href="como-ajudar.html">Como Ajudar</a></span></span
+              ><span class="contato-text42 Bodytext"><span><a href="contato.html">Contato</span></span
+              ><span class="contato-text44 Bodytext"><span><a href="faq.html">FAQ</a></span></span
               ><div class="contato-login"
                 ><span class="contato-text46 Bodytext"
-                  ><span>Login</span></span
+                  ><span><a href="cadastrar-usuario.html">Login</a></span></span
                 ></div
               ></div
             ><img
