--- a/faq.html
+++ b/faq.html
@@ -54,8 +54,8 @@
       rel="stylesheet"
       href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css" /></head
   ><body
-    ><link rel="stylesheet" href="./style.css" /><div
-      ><link href="./faq.css" rel="stylesheet" /><div class="faq-container"
+    ><link rel="stylesheet" href="assets/css/style.css" /><div
+      ><link href="assets/css/faq.css" rel="stylesheet" /><div class="faq-container"
         ><div class="faq-faq"
           ><div class="faq-frame1321316142"
             ><div class="faq-copy"
@@ -141,13 +141,13 @@
             ></div
           ><div class="faq-navigation"
             ><div class="faq-items"
-              ><span class="faq-text28 Bodytext"><span>Sobre Nós</span></span
-              ><span class="faq-text30 Bodytext"><span>Como Ajudar</span></span
-              ><span class="faq-text32 Bodytext"><span>Contato</span></span
-              ><span class="faq-text34 Bodytext"><span>FAQ</span></span
+              ><span class="faq-text28 Bodytext"><span><a href="sobre-ns.html">Sobre Nós</a></span></span
+              ><span class="faq-text30 Bodytext"><span><a href="como-ajudar.html">Como Ajudar</a></span></span
+              ><span class="faq-text32 Bodytext"><span><a href="contato.html">Contato</span></span
+              ><span class="faq-text34 Bodytext"><span><a href="faq.html">FAQ</a></span></span
               ><div class="faq-login"
                 ><span class="faq-text36 Bodytext"
-                  ><span>Login</span></span
+                  ><span><a href="cadastrar-usuario.html">Login</a></span></span
                 ></div
               ></div
             ></div
