--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       rel="stylesheet"
       href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css" /></head
   ><body
-    ><link rel="stylesheet" href="./style.css" /><div
-      ><link href="./index.css" rel="stylesheet" /><div
+    ><link rel="stylesheet" href="assets/css/style.css" /><div
+      ><link href="assets/css/index.css" rel="stylesheet" /><div
         class="home-page-container"
         ><div class="home-page-home-page"
           ><div class="home-page-frame1321316142"
@@ -137,15 +137,15 @@
           ><div class="home-page-navigation"
             ><div class="home-page-items"
               ><span class="home-page-text30 Bodytext"
-                ><span>Sobre Nós</span></span
+                ><span><a href="sobre-ns.html">Sobre Nós</a></span></span
               ><span class="home-page-text32 Bodytext"
-                ><span>Como Ajudar</span></span
+                ><span><a href="como-ajudar.html">Como Ajudar</a></span></span
               ><span class="home-page-text34 Bodytext"
-                ><span>Contato</span></span
-              ><span class="home-page-text36 Bodytext"><span>FAQ</span></span
+                ><span><a href="contato.html">Contato</a></span></span
+              ><span class="home-page-text36 Bodytext"><span><a href="faq.html">FAQ</a></span></span
               ><div class="home-page-login"
                 ><span class="home-page-text38 Bodytext"
-                  ><span>Login</span></span
+                  ><span><a href="cadastrar-usuario.html">Login</a></span></span
                 ></div
               ></div
             ></div
