--- a/sobre-ns.html
+++ b/sobre-ns.html
@@ -54,8 +54,8 @@
       rel="stylesheet"
       href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css" /></head
   ><body
-    ><link rel="stylesheet" href="./style.css" /><div
-      ><link href="./sobre-ns.css" rel="stylesheet" /><div
+    ><link rel="stylesheet" href="assets/css/style.css" /><div
+      ><link href="assets/css/sobre-ns.css" rel="stylesheet" /><div
         class="sobre-ns-container"
         ><div class="sobre-ns-sobre-ns"
           ><div class="sobre-ns-frame1321316142"
@@ -94,14 +94,14 @@
           ><div class="sobre-ns-navigation"
             ><div class="sobre-ns-items"
               ><span class="sobre-ns-text16 Bodytext"
-                ><span>Sobre Nós</span></span
+                ><span><a href="sobre-ns.html">Sobre Nós</a></span></span
               ><span class="sobre-ns-text18 Bodytext"
-                ><span>Como Ajudar</span></span
-              ><span class="sobre-ns-text20 Bodytext"><span>Contato</span></span
-              ><span class="sobre-ns-text22 Bodytext"><span>FAQ</span></span
+                ><span><a href="como-ajudar.html">Como Ajudar</a></span></span
+              ><span class="sobre-ns-text20 Bodytext"><span><a href="contato.html">Contato</span></span
+              ><span class="sobre-ns-text22 Bodytext"><span><a href="faq.html">FAQ</a></span></span
               ><div class="sobre-ns-login"
                 ><span class="sobre-ns-text24 Bodytext"
-                  ><span>Login</span></span
+                  ><span><a href="cadastrar-usuario.html">Login</a></span></span
                 ></div
               ></div
             ></div
