--- a/contato.html
+++ b/contato.html
@@ -1,178 +1,215 @@
 <!DOCTYPE html>
-<html lang="english"
-  ><head
-    ><title>Contato - exported project</title
-    ><meta property="og:title" content="Contato - exported project" /><meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0" /><meta
-      charset="utf-8" /><meta
-      property="twitter:card"
-      content="summary_large_image" /><style data-tag="reset-style-sheet">
-      html {  line-height: 1.15;}body {  margin: 0;}* {  box-sizing: border-box;  border-width: 0;  border-style: solid;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6,figure,blockquote,figcaption {  margin: 0;  padding: 0;}button {  background-color: transparent;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}html { scroll-behavior: smooth  }</style
-    ><style data-tag="default-style-sheet">
-      html {
-        font-family: Inter;
-        font-size: 16px;
-      }
+<html lang="english"></html>
 
-      body {
-        font-weight: 400;
-        font-style:normal;
-        text-decoration: none;
-        text-transform: none;
-        letter-spacing: normal;
-        line-height: 1.15;
-        color: var(--dl-color-gray-black);
-        background-color: var(--dl-color-gray-white);
+<head>
+  <title>Contato - exported project</title>
+  <meta property="og:title" content="Contato - exported project" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta property="twitter:card" content="summary_large_image" />
+  <style data-tag="reset-style-sheet">
+    html {
+      line-height: 1.15;
+    }
 
-        null
-      }</style
-    ><link
-      rel="stylesheet"
-      href="https://unpkg.com/animate.css@4.1.1/animate.css" /><link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
-      data-tag="font" /><link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
-      data-tag="font" /><link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
-      data-tag="font" /><link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
-      data-tag="font" /><link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
-      data-tag="font" /><link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
-      data-tag="font" /><link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
-      data-tag="font" /><link
-      rel="stylesheet"
-      href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css" /></head
-  ><body
-    ><link rel="stylesheet" href="assets/css/style.css" /><div
-      ><link href="assets/css/contato.css" rel="stylesheet" /><div
-        class="contato-container"
-        ><div class="contato-contactform"
-          ><div class="contato-form"
-            ><div class="contato-input"
-              ><span class="contato-text Smalltext"><span>Nome</span></span
-              ><div class="contato-field input"
-                ><span class="contato-text02 Smalltext"
-                  ><span>Ex: João</span></span
-                ></div
-              ></div
-            ><div class="contato-input1"
-              ><span class="contato-text04 Smalltext"
-                ><span>Sobrenome</span></span
-              ><div class="contato-field1 input"
-                ><span class="contato-text06 Smalltext"
-                  ><span>Ex: Da Silva</span></span
-                ></div
-              ></div
-            ><div class="contato-input2"
-              ><span class="contato-text08 Smalltext"
-                ><span>Endereço de e-mail</span></span
-              ><div class="contato-field2 input"
-                ><span class="contato-text10 Smalltext"
-                  ><span>email@exemplo.com</span></span
-                ></div
-              ></div
-            ><div class="contato-input3"
-              ><span class="contato-text12 Smalltext"
-                ><span>Sua mensagem</span></span
-              ><div class="contato-field3 input"
-                ><span class="contato-text14 Smalltext"
-                  ><span>Digite sua mensagem aqui</span></span
-                ></div
-              ></div
-            ><button class="contato-button"
-              ><span class="contato-text16 Bodytext"
-                ><span>Enviar</span></span
-              ></button
-            ></div
-          ><div class="contato-headline"
-            ><span class="contato-text18 Title"
-              ><span>Entre em Contato</span></span
-            ><span class="contato-text20 Subheading"
-              ><span>Tem alguma dúvida ou sugestão? Nos avise!</span></span
-            ></div
-          ><div class="contato-navigation-footer"
-            ><div class="contato-items"
-              ><span class="contato-text22 Smalltext"
-                ><span>Como Ajudar</span></span
-              ><span class="contato-text24 Smalltext"><span>Doações</span></span
-              ><span class="contato-text26 Smalltext"
-                ><span>Voluntariados</span></span
-              ><span class="contato-text28 Smalltext"
-                ><span>Instruções</span></span
-              ></div
-            ><div class="contato-items1"
-              ><span class="contato-text30 Smalltext"
-                ><span>Sobre Nós</span></span
-              ><span class="contato-text32 Smalltext"
-                ><span>Missão e Valores</span></span
-              ><span class="contato-text34 Smalltext"><span>Contato</span></span
-              ><span class="contato-text36 Smalltext"
-                ><span>FAQ</span></span
-              ></div
-            ><div class="contato-social-icons"
-              ><button class="contato-buttons-icon"
-                ><div class="contato-icon"
-                  ><img
-                    alt="Icon1221"
-                    src="public/external/icon1221-u06y.svg"
-                    class="contato-icon1" /></div></button
-              ><button class="contato-buttons-icon1"
-                ><div class="contato-icon2"
-                  ><img
-                    alt="Icon1221"
-                    src="public/external/icon1221-09ne.svg"
-                    class="contato-icon3" /></div></button
-              ><button class="contato-buttons-icon2"
-                ><div class="contato-icon4"
-                  ><img
-                    alt="Icon1222"
-                    src="public/external/icon1222-79p.svg"
-                    class="contato-icon5" /></div></button
-              ><button class="contato-buttons-icon3"
-                ><div class="contato-icon6"
-                  ><img
-                    alt="Icon1222"
-                    src="public/external/icon1222-1w2d.svg"
-                    class="contato-icon7" /></div></button></div
-            ><img
-              alt="Divider1222"
-              src="public/external/divider1222-69kb.svg"
-              class="contato-divider" /></div
-          ><img
-            alt="imagem2024040121030128231647"
-            src="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/9fc91c5a-4f3d-4b7d-b5ca-fab38407b9e8/82f4a6a6-5305-4ead-8c54-3e8fa95e5b54?org_if_sml=187133&amp;force_format=original"
-            class="contato-imagem202404012103012823" /><div
-            class="contato-navigation"
-            ><div class="contato-items2"
-              ><span class="contato-text38 Bodytext"
-                ><span><a href="sobre-ns.html">Sobre Nós</a></span></span
-              ><span class="contato-text40 Bodytext"
-                ><span><a href="como-ajudar.html">Como Ajudar</a></span></span
-              ><span class="contato-text42 Bodytext"><span><a href="contato.html">Contato</span></span
-              ><span class="contato-text44 Bodytext"><span><a href="faq.html">FAQ</a></span></span
-              ><div class="contato-login"
-                ><span class="contato-text46 Bodytext"
-                  ><span><a href="cadastrar-usuario.html">Login</a></span></span
-                ></div
-              ></div
-            ><img
-              alt="imagem2024040121030128211322"
-              src="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/9fc91c5a-4f3d-4b7d-b5ca-fab38407b9e8/851c0a80-753c-4840-bf7a-4782d5f281b3?org_if_sml=114196&amp;force_format=original"
-              class="contato-imagem202404012103012821" /></div
-          ><img
-            alt="imagem2024040121030128221647"
-            src="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/9fc91c5a-4f3d-4b7d-b5ca-fab38407b9e8/26d87f9f-584a-4295-8345-264c1de34974?org_if_sml=115252&amp;force_format=original"
-            class="contato-imagem202404012103012822" /></div></div
-    ></div> </body
-></html>
+    body {
+      margin: 0;
+    }
+
+    * {
+      box-sizing: border-box;
+      border-width: 0;
+      border-style: solid;
+    }
+
+    p,
+    li,
+    ul,
+    pre,
+    div,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    figure,
+    blockquote,
+    figcaption {
+      margin: 0;
+      padding: 0;
+    }
+
+    button {
+      background-color: transparent;
+    }
+
+    button,
+    input,
+    optgroup,
+    select,
+    textarea {
+      font-family: inherit;
+      font-size: 100%;
+      line-height: 1.15;
+      margin: 0;
+    }
+
+    button,
+    select {
+      text-transform: none;
+    }
+
+    button,
+    [type="button"],
+    [type="reset"],
+    [type="submit"] {
+      -webkit-appearance: button;
+    }
+
+    button::-moz-focus-inner,
+    [type="button"]::-moz-focus-inner,
+    [type="reset"]::-moz-focus-inner,
+    [type="submit"]::-moz-focus-inner {
+      border-style: none;
+      padding: 0;
+    }
+
+    button:-moz-focus,
+    [type="button"]:-moz-focus,
+    [type="reset"]:-moz-focus,
+    [type="submit"]:-moz-focus {
+      outline: 1px dotted ButtonText;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: inherit;
+    }
+
+    input {
+      padding: 2px 4px;
+    }
+
+    img {
+      display: block;
+    }
+
+    html {
+      scroll-behavior: smooth
+    }
+  </style>
+  <style data-tag="default-style-sheet">
+    html {
+      font-family: Inter;
+      font-size: 16px;
+    }
+
+    body {
+      font-weight: 400;
+      font-style: normal;
+      text-decoration: none;
+      text-transform: none;
+      letter-spacing: normal;
+      line-height: 1.15;
+      color: var(--dl-color-gray-black);
+      background-color: var(--dl-color-gray-white);
+
+      null
+    }
+  </style>
+  <link rel="stylesheet" href="https://unpkg.com/animate.css@4.1.1/animate.css" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
+    data-tag="font" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
+    data-tag="font" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
+    data-tag="font" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
+    data-tag="font" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
+    data-tag="font" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
+    data-tag="font" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
+    data-tag="font" />
+  <link rel="stylesheet" href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css" />
+</head>
+
+<body>
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <div>
+    <link href="assets/css/contato.css" rel="stylesheet" />
+    <div class="contato-container">
+      <div class="contato-contactform">
+        <div class="contato-form">
+          <div class="contato-input"><span class="contato-text Smalltext"><span>Nome</span></span>
+            <div class="contato-field input"><span class="contato-text02 Smalltext"><span>Ex: João</span></span></div>
+          </div>
+          <div class="contato-input1"><span class="contato-text04 Smalltext"><span>Sobrenome</span></span>
+            <div class="contato-field1 input"><span class="contato-text06 Smalltext"><span>Ex: Da Silva</span></span>
+            </div>
+          </div>
+          <div class="contato-input2"><span class="contato-text08 Smalltext"><span>Endereço de e-mail</span></span>
+            <div class="contato-field2 input"><span
+                class="contato-text10 Smalltext"><span>email@exemplo.com</span></span></div>
+          </div>
+          <div class="contato-input3"><span class="contato-text12 Smalltext"><span>Sua mensagem</span></span>
+            <div class="contato-field3 input"><span class="contato-text14 Smalltext"><span>Digite sua mensagem
+                  aqui</span></span></div>
+          </div><button class="contato-button"><span class="contato-text16 Bodytext"><span>Enviar</span></span></button>
+        </div>
+        <div class="contato-headline"><span class="contato-text18 Title"><span>Entre em Contato</span></span><span
+            class="contato-text20 Subheading"><span>Tem alguma dúvida ou sugestão? Nos avise!</span></span></div>
+        <div class="contato-navigation-footer">
+          <div class="contato-items"><span class="contato-text22 Smalltext"><span>Como Ajudar</span></span><span
+              class="contato-text24 Smalltext"><span>Doações</span></span><span
+              class="contato-text26 Smalltext"><span>Voluntariados</span></span><span
+              class="contato-text28 Smalltext"><span>Instruções</span></span></div>
+          <div class="contato-items1"><span class="contato-text30 Smalltext"><span>Sobre Nós</span></span><span
+              class="contato-text32 Smalltext"><span>Missão e Valores</span></span><span
+              class="contato-text34 Smalltext"><span>Contato</span></span><span
+              class="contato-text36 Smalltext"><span>FAQ</span></span></div>
+          <div class="contato-social-icons"><button class="contato-buttons-icon">
+              <div class="contato-icon"><img alt="Icon1221" src="public/external/icon1221-u06y.svg"
+                  class="contato-icon1" /></div>
+            </button><button class="contato-buttons-icon1">
+              <div class="contato-icon2"><img alt="Icon1221" src="public/external/icon1221-09ne.svg"
+                  class="contato-icon3" /></div>
+            </button><button class="contato-buttons-icon2">
+              <div class="contato-icon4"><img alt="Icon1222" src="public/external/icon1222-79p.svg"
+                  class="contato-icon5" /></div>
+            </button><button class="contato-buttons-icon3">
+              <div class="contato-icon6"><img alt="Icon1222" src="public/external/icon1222-1w2d.svg"
+                  class="contato-icon7" /></div>
+            </button></div><img alt="Divider1222" src="public/external/divider1222-69kb.svg" class="contato-divider" />
+        </div><img alt="imagem2024040121030128231647"
+          src="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/9fc91c5a-4f3d-4b7d-b5ca-fab38407b9e8/82f4a6a6-5305-4ead-8c54-3e8fa95e5b54?org_if_sml=187133&amp;force_format=original"
+          class="contato-imagem202404012103012823" />
+        <div class="contato-navigation">
+          <div class="contato-items2"><span class="contato-text38 Bodytext"><span><a href="sobre-ns.html">Sobre
+                  Nós</a></span></span><span class="contato-text40 Bodytext"><span><a href="como-ajudar.html">Como
+                  Ajudar</a></span></span><span class="contato-text42 Bodytext"><span><a
+                  href="contato.html">Contato</span></span><span class="contato-text44 Bodytext"><span><a
+                  href="faq.html">FAQ</a></span></span>
+            <div class="contato-login"><span class="contato-text46 Bodytext"><span><a
+                    href="cadastrar-usuario.html">Login</a></span></span></div>
+          </div><img alt="imagem2024040121030128211322"
+            src="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/9fc91c5a-4f3d-4b7d-b5ca-fab38407b9e8/851c0a80-753c-4840-bf7a-4782d5f281b3?org_if_sml=114196&amp;force_format=original"
+            class="contato-imagem202404012103012821" />
+        </div><img alt="imagem2024040121030128221647"
+          src="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/9fc91c5a-4f3d-4b7d-b5ca-fab38407b9e8/26d87f9f-584a-4295-8345-264c1de34974?org_if_sml=115252&amp;force_format=original"
+          class="contato-imagem202404012103012822" />
+      </div>
+    </div>
+  </div>
+</body>
+
+</html>
