--- a/area-logada.html
+++ b/area-logada.html
@@ -180,7 +180,7 @@
               foto</span></span><span class="area-logada-text22"><span>Financeiro</span></span><span
             class="area-logada-text24"><span>Dados da empresa</span></span><span
             class="area-logada-text26"><span>Histórico de Doações</span></span><span
-            class="area-logada-text28"><span>Deslogar</span></span></div>
+            class="area-logada-text28"><span onclick="deslogarUsuario()">Deslogar</span></span></div>
         <div class="area-logada-navigation">
           <div class="area-logada-items2"><span class="area-logada-text30 Bodytext"><span><a href="sobre-ns.html">Sobre
                   Nós</a></span></span><span class="area-logada-text32 Bodytext"><span><a href="como-ajudar.html">Como
@@ -255,6 +255,7 @@
       </div>
     </div>
   </div>
+  <script src="assets/js/script.js"></script>
 </body>
 
 </html>
