--- a/cadastrar-usuario.html
+++ b/cadastrar-usuario.html
@@ -216,6 +216,6 @@
       </div>
     </div>
   </div>
-  <script src="assets/js/cadastrar-usuario.js"></script>
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
